# my-gm-is-ai

./: .gitignore  README.md  combat-positioning-plan.md  design-eval-examine.md  design-inline-indicators.md  phase-4-plan.md  phase-4-report.md  plan-stats.md  plan.md  problems.txt  pyproject.toml  validation-plan.md
adventures/bag-of-holding/: LICENSE  corpus.json  default-player.json  hard-state.json  input.md  scenario-map.md  (+2 more)
doc/: combat.md  gear.md  intro.md  models.md  npcs.md  player-stats.md  soft-items.md  soft.md  validation.md
mgmai/: cli.py  config.py  datapack.py  logging.py
schema/: actions.md  corpus.md  events.md  hard-state.md  scenario-generation.md  soft-state.md  srd-5e-pack.md
scripts/: generate_datapack_manifest.py  validate.py  validate_adventure.py
tests/: conftest.py  helpers.py  test_actions.py  test_assembler.py  test_bag_of_holding_webs.py  test_briefing.py  test_cli.py  test_combat.py  test_commands.py  test_conditions.py  test_config.py  test_corpus.py  test_data_pack.py  test_datapack_manifest.py  test_default_player.py  test_dialogue.py  test_display.py  test_encounters.py  test_engine.py  test_engine_integration.py  test_equip_gear.py  test_event_bus.py  test_events.py  test_followers.py  test_gear_pack.py  test_gmbriefing.py  test_hard_state.py  test_hard_state_generation.py  test_headless.py  test_input_normalizer.py  test_llm_client.py  test_llm_model_config.py  test_logging.py  test_loop.py  test_narration.py  test_narrative_indicators.py  test_parser.py  test_player_death.py  test_post_validate.py  test_prose_validation.py  (+11 more)
(+83 files in other folders)
