[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mgmai"
version = "0.1.0"
description = "My GM is AI — an AI-driven Game Master for tabletop RPG adventures"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "openai>=1.0",
    "jinja2>=3.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mgmai = "mgmai.cli:main"

[tool.setuptools.packages.find]
include = ["mgmai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: marks tests as requiring live LLM API calls (deselect with -m 'not llm')",
]
